<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="delete">删除</string>
    <string name="send">发送</string>
    <string name="unknown_message">未知消息类型</string>
    <string name="camera">拍\t照</string>
    <string name="photo">照\t片</string>
    <string name="no_message">暂无消息</string>
    <string name="cancel">取消</string>
    <string name="confirm">确定</string>
    <string name="sure_to_delete_conversation">删除后将清空历史消息记录，确定删除吗？</string>
    <string name="send_product">发送宝贝</string>
    <string name="location">位置</string>
    <string name="video">视频</string>
</resources>